--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI="mongodb://localhost:27017/bookSnap"
+MONGO_URI="mongodb+srv://dhanshri1701:QMBtQJNM0o2NEkoX@cluster0.upc1pwu.mongodb.net/bookSnap"
 SECRET_KEY="DH@NSHRI_1701"
